--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,12 +39,14 @@
             android:name=".EventsActivity"
             android:label="EventsActivity" >
         </activity>
+        <activity
+            android:name=".MyClassMapsActivity"
+            android:label="MyClassMapsActivity" >
+        </activity>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_key" />
-           <!-- android:value="AIzaSyAmrVwO40t70TjVSKj51Z3VnNt71IDpGdw" /> -->
-
+            android:value="@string/google_maps_key"  />
 
     </application>
 
