--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,6 +40,15 @@
             android:label="EventsActivity" >
         </activity>
 
+        <activity
+            android:name=".MyCoursesActivity"
+            android:label="My Courses" >
+        </activity>
+        <activity
+            android:name=".AddCourseActivity"
+            android:label="Add New Class" >
+        </activity>
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
